--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "predeploy": "npm run build && echo \"school.fede1132.me\" > build/CNAME",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
